Back to pretty permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ url: "http://portfoliodavidtang.com" # the base hostname & protocol for your sit
 
 # Build settings
 markdown: kramdown
+permalink: pretty
