Update Jekyll config to use custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: David Tang
 email: emaildavidtang@gmail.com
 description: Graphic and Web designer with passion to art and details based in Sweden.
-baseurl: "/portfoliodavidtang.com" # the subpath of your site, e.g. /blog/
-url: "http://n2clic.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://portfoliodavidtang.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
